# aries-acapy-plugins

./: .gitignore  repo_manager.py
.github/: dependabot.yml
.github/workflows/: create-release-pr.yaml  pr-integration-tests.yaml  pr-linting-and-unit-tests.yaml
basicmessage_storage/: pyproject.toml
basicmessage_storage/basicmessage_storage/v1_0/tests/: test_routes.py
basicmessage_storage/integration/: pyproject.toml
connection_update/: pyproject.toml
connection_update/connection_update/v1_0/tests/: test_routes.py
connection_update/integration/: pyproject.toml
firebase_push_notifications/: pyproject.toml
firebase_push_notifications/.devcontainer/: Dockerfile
firebase_push_notifications/firebase_push_notifications/v1_0/tests/: test_routes.py
firebase_push_notifications/integration/: pyproject.toml
kafka_events/: pyproject.toml
kafka_events/demo/setup/: pyproject.toml
kafka_events/docker/: Dockerfile
kafka_events/integration/: pyproject.toml
kafka_events/kafka_events/v1_0/deliverer/: pyproject.toml
kafka_events/kafka_events/v1_0/deliverer/deliverer/: __init__.py
kafka_events/kafka_events/v1_0/http_kafka_relay/: pyproject.toml
kafka_events/kafka_events/v1_0/kafka_queue/: inbound.py  outbound.py
kafka_events/kafka_events/v1_0/kafka_queue/events/: __init__.py
multitenant_provider/: pyproject.toml
multitenant_provider/.devcontainer/: Dockerfile
multitenant_provider/integration/: pyproject.toml
multitenant_provider/multitenant_provider/v1_0/: manager.py
multitenant_provider/multitenant_provider/v1_0/tests/: test_manager.py  test_provider.py  test_routes.py
nats_events/: README.md  pyproject.toml
nats_events/nats_events/v1_0/nats_queue/: __init__.py  config.py
nats_events/nats_events/v1_0/nats_queue/events/: __init__.py
nats_events/nats_events/v1_0/nats_queue/tests/: test_events.py
oid4vci/: pyproject.toml
oid4vci/demo/frontend/: Dockerfile  package-lock.json  package.json
oid4vci/docker/: Dockerfile
oid4vci/integration/: Dockerfile  pyproject.toml
oid4vci/integration/afj/: Dockerfile  package-lock.json  package.json
oid4vci/integration/afj_runner/: Dockerfile  pyproject.toml
oid4vci/oid4vci/: public_routes.py
oid4vci/oid4vci/tests/routes/: test_admin.py
plugin_globals/: pyproject.toml
plugin_globals/docker/: Dockerfile
plugin_globals/integration/: pyproject.toml
redis_events/: pyproject.toml
redis_events/.devcontainer/: Dockerfile
redis_events/docker/services/: pyproject.toml
redis_events/integration/: Dockerfile  docker-compose.yml  pyproject.toml
redis_events/redis_events/v1_0/redis_queue/: config.py  utils.py
redis_events/redis_events/v1_0/redis_queue/events/: __init__.py
redis_events/redis_events/v1_0/redis_queue/tests/: test_events.py
redis_events/redis_events/v1_0/services/deliverer/: __init__.py
rpc/: pyproject.toml
rpc/.devcontainer/: Dockerfile
rpc/docker/: Dockerfile
rpc/integration/: pyproject.toml
rpc/rpc/v1_0/: routes.py
rpc/rpc/v1_0/tests/: test_routes.py
