[tool.poetry]
name = "connection_update-tests"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
pytest-asyncio = "~0.23.7"
requests = "^2.31.0"
aries-cloudagent = { git = "https://github.com/didx-xyz/aries-cloudagent-python.git", tag = "1.0.0b1" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
