[tool.poetry]
name = "redis_events-tests"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
pytest-asyncio = "~0.24.0"
requests = "^2.31.0"
aiohttp = "^3.9.5"
aries-cloudagent = { git = "https://github.com/didx-xyz/aries-cloudagent-python.git", tag = "1.0.0b1" }
fastapi-slim = "^0.112.0"
nest-asyncio = "^1.5.5"
pydantic = "^2.7"
redis = "^5.0.7"
uvicorn = "^0.30.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
