[tool.poetry]
name = "deliverer"
version = "0.1.0"
description = "Kafka Consumer for outbound messages from ACA-Py"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.12"
aiokafka = "^0.7.2"
aiohttp = "^3.10.9"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
